--- a/app.json
+++ b/app.json
@@ -11,6 +11,9 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "experiments": {
+      "typedRoutes": true
+    },
     "assetBundlePatterns": [
       "**/*"
     ],
