--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-paper": "^5.10.6",
     "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
+    "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.0",
-    "styled-components": "^5.3.11"
+    "styled-components": "^5.3.11",
+    "expo-checkbox": "~2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
