--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^6.9.14",
     "axios": "^1.5.1",
     "expo": "~49.0.13",
+    "expo-checkbox": "~2.4.0",
     "expo-constants": "~14.4.2",
     "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
@@ -34,8 +35,7 @@
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.0",
-    "styled-components": "^5.3.11",
-    "expo-checkbox": "~2.4.0"
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
