--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-router": "^2.0.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.4.0",
+    "firebase-admin": "^11.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.5",
